force-app/src/objects/c2g__ReportingBalance__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpreportingbalance</customHelpPage>
    <description>Extract of the Budget and Balance information used for reporting purposes.</description>
    <fields>
        <fullName>CBKey__c</fullName>
        <label>CBKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <formula>c2g__Period__r.c2g__StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountingBook__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Accounting Book</label>
        <referenceTo>c2g__AccountingBook__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AdjustOperatingActivities__c</fullName>
        <label>Reclassify Profits</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BalanceUpdateTimestamp__c</fullName>
        <label>Balance Update Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BudgetAndBalance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget and Balance</label>
        <referenceTo>c2g__codaBudget__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CashFlowCategory__c</fullName>
        <label>Cash Flow Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CashFlowLineSummary__c</fullName>
        <label>Cash Flow Line Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension1__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension2__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension3__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DualValue__c</fullName>
        <label>Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__HashCode__c</fullName>
        <description>Cash Flow Exception Hash Code</description>
        <label>Cash Flow Exception Hash Code</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__HomeValue__c</fullName>
        <label>Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__IntersectDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intersect Definition</label>
        <referenceTo>c2g__codaIntersectDefinition__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Reporting Balances Local GLA</relationshipLabel>
        <relationshipName>ReportingBalancesLocalGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__NumberOfRelatedTransactionLineItems__c</fullName>
        <label>Number of Related Transaction Line Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Reporting Balances (Company)</relationshipLabel>
        <relationshipName>ReportingBalances2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodNumber__c</fullName>
        <formula>IF(ISNUMBER(c2g__Period__r.c2g__PeriodNumber__c),VALUE(c2g__Period__r.c2g__PeriodNumber__c),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingBalanceHashCode__c</fullName>
        <externalId>true</externalId>
        <label>Reporting Balance Hash Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__Subanalysis__c</fullName>
        <formula>c2g__BankAccount__r.c2g__AccountName__c + c2g__Product__r.Name + c2g__TaxCode__r.Name + c2g__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-analysis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Size</fullName>
                </value>
                <value>
                    <fullName>HeadCountActual</fullName>
                </value>
                <value>
                    <fullName>HeadCountBudget</fullName>
                </value>
                <value>
                    <fullName>HeadCountForecast</fullName>
                </value>
                <value>
                    <fullName>HeadCountPlan</fullName>
                </value>
                <value>
                    <fullName>VolumeActual</fullName>
                </value>
                <value>
                    <fullName>VolumeBudget</fullName>
                </value>
                <value>
                    <fullName>VolumeForecast</fullName>
                </value>
                <value>
                    <fullName>VolumePlan</fullName>
                </value>
                <value>
                    <fullName>Shares</fullName>
                </value>
                <value>
                    <fullName>SharesInIssue</fullName>
                </value>
                <value>
                    <fullName>SharesOutstanding</fullName>
                </value>
                <value>
                    <fullName>SharesPrice</fullName>
                </value>
                <value>
                    <fullName>Cash Flow Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__YearNumber__c</fullName>
        <formula>IF(ISNUMBER(c2g__Period__r.c2g__YearName__r.Name),VALUE(c2g__Period__r.c2g__YearName__r.Name),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isPL__c</fullName>
        <description>True if CBRB is Profit and Loss type</description>
        <formula>TEXT(c2g__GeneralLedgerAccount__r.c2g__Type__c) = &apos;Profit and Loss&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isPL</label>
        <type>Checkbox</type>
    </fields>
    <label>Reporting Balance</label>
    <listViews>
        <fullName>Exported</fullName>
        <columns>NAME</columns>
        <columns>c2g__HomeValue__c</columns>
        <columns>c2g__DualValue__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__IntersectDefinition__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__Dimension1__c</columns>
        <columns>c2g__Dimension2__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__ExternalId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__ExternalId__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>c2g__GeneralLedgerAccount__c</field>
            <operation>startsWith</operation>
            <value>6000</value>
        </filters>
        <label>Exported</label>
    </listViews>
    <listViews>
        <fullName>FF_CIS_Inc_Forecast</fullName>
        <columns>NAME</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__Dimension1__c</columns>
        <columns>c2g__Dimension2__c</columns>
        <columns>c2g__Dimension3__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__HomeValue__c</columns>
        <columns>c2g__DualValue__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>c2g__Type__c</field>
            <operation>equals</operation>
            <value>Forecast</value>
        </filters>
        <label>FF CIS Inc, Forecast</label>
        <queue>FF_Council_of_International_Schools_Inc</queue>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_Inc_ReportingBalance</fullName>
        <columns>NAME</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__Dimension1__c</columns>
        <columns>c2g__Dimension2__c</columns>
        <columns>c2g__Dimension3__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__HomeValue__c</columns>
        <columns>c2g__DualValue__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>c2g__Period__c</field>
            <operation>startsWith</operation>
            <value>2021,2022,2023</value>
        </filters>
        <filters>
            <field>c2g__Type__c</field>
            <operation>equals</operation>
            <value>Actual</value>
        </filters>
        <filters>
            <field>c2g__GeneralLedgerAccount__c</field>
            <operation>startsWith</operation>
            <value>4020</value>
        </filters>
        <label>FF Council of International Schools, Inc</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_ReportingBalance</fullName>
        <columns>NAME</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__Dimension1__c</columns>
        <columns>c2g__Dimension2__c</columns>
        <columns>c2g__Dimension3__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>c2g__HomeValue__c</columns>
        <columns>c2g__DualValue__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>c2g__Type__c</field>
            <operation>equals</operation>
            <value>Budget</value>
        </filters>
        <filters>
            <field>c2g__Period__c</field>
            <operation>startsWith</operation>
            <value>2024</value>
        </filters>
        <label>FF Council of International Schools</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__Dimension1__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__HomeValue__c</columns>
        <columns>c2g__DualValue__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__YearNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__Type__c</field>
            <operation>equals</operation>
            <value>Budget</value>
        </filters>
        <filters>
            <field>c2g__YearNumber__c</field>
            <operation>equals</operation>
            <value>2023</value>
        </filters>
        <filters>
            <field>c2g__Dimension1__c</field>
            <operation>contains</operation>
            <value>higher</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Reporting Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Balances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>